# todo-fastApi-NextJs-with-Auth-deployed

backend/todo-app-auth/: .env  package-lock.json  pyproject.toml
backend/todo-app-auth/src/todo_app_auth/: auth.py  db.py  main.py
backend/todo-app-auth/src/todo_app_auth/router/: user.py
client/: package-lock.json  package.json
client/src/app/: layout.tsx  page.tsx
client/src/app/(auth)/: page.tsx
client/src/app/(auth)/login/: page.tsx
client/src/app/(auth)/register/: page.tsx
client/src/app/todos/: page.tsx
client/src/components/ui/: button.tsx  toast.tsx  todo-input.tsx  todo-list.tsx  update-todo-modal.tsx  use-toast.ts
client/src/contexts/: auth-context.tsx
client/src/hooks/: use-toast.ts
client/src/lib/: api.ts  auth.ts
client/src/types/: auth.ts  todo.ts
client/src/utils/: alerts.ts
